berhasil mantap dkitlah

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 </head>
 
 <body>
+    <div class="top-bar">
+        <ul>
+            <li><a
+                    href="https://coggle.it/diagram/YA5j5BfeOvNuaqYu/t/jalur-belajar-web-development-2021-untuk-pemula/ed6061d5440b5a1a42737fb2f52ac42eb9c516a325ab949a57ee697eaed146c5">Mind
+                    Map by WPUnpas</a></li>
+            <li><a href="#">link 2</a></li>
+            <li><a href="#">link 3</a></li>
+            <li><a href="#">link 4</a></li>
+            <li><a href="#">link 5</a></li>
+        </ul>
+    </div>
     <div class="container">
+        <a href="https://www.youtube.com/channel/UCkXmLjEr95LVtGuIm3l2dPg" target="_blank" class="yt">ㅤ</a>
         <div class="header">
             <h1>MyWebsite</h1>
             <ul class="home">
